# spacket

./: .gitignore  .gitmodules  CMakeLists.txt  buffer.h  config.cpp  config.h  config_utils.cpp  config_utils.h  download_external.sh  errors.cpp  errors.h  functions.cmake  generate.sh.sample  generate_here.sh  generate_here_fw.sh  logging.h  namespaces.h  packetizer.cpp  result.h  run_tests.sh  test1.cpp  time_utils.h
lib/: CMakeLists.txt  config.cpp  config_utils.cpp  errors.cpp  logging.h  sources.cmake
lib/chibios/: aeabi_atexit.cpp  assert_func.cpp  crc_p.cpp  debug_print.cpp  errors.cpp  fatal_error.cpp  result_fatal.cpp  serial_device_impl.cpp  sources.cmake  thread_error_report.cpp
lib/chibios/include/spacket/: buffer_pool_allocator.h  debug_print_impl.h  packetizer_thread_function.h  result_utils.h  serial_device.h  serial_device_impl.h  time_utils_impl.h
lib/cobs/: cobs.c
lib/include/spacket/: allocator.h  bind.h  buffer.h  buffer_debug.h  buffer_utils.h  cobs.h  config.h  cph.h  cpm.h  cpm_debug.h  crc.h  crc32.h  debug_print.h  default_constants.h  deferred_proc.h  driver.h  endpoint.h  errors.h  fatal_error.h  format_utils.h  guard_utils.h  macro_utils.h  mailbox.h  memory_utils.h  module.h  multiplexer.h  multistack.h  packet_device.h  packetizer.h  queue.h  read_packet.h  result.h  result_fatal.h  result_utils_base.h  ring.h  serial_device.h  serial_device_base.h  serial_utils.h  stack.h  thread.h  (+2 more)
lib/include/spacket/cobs/: cobs.h
lib/include/spacket/impl/: multiplexer_impl.h  multiplexer_impl_base.h  packet_decode_fsm.h  packet_device_impl.h  packet_device_impl_base.h  packetizer-impl.h  read_packet-impl.h
lib/linux/: CMakeLists.txt  crc_p.cpp  debug_print.cpp  fatal_error.cpp  serial_device_impl.cpp  sources.cmake  traced_call.h
lib/linux/include/spacket/: buffer_new_allocator.h  config_utils.h  debug_print_impl.h  error_to_string.h  port_config.h  result_utils.h  serial_device_impl.h  time_utils_impl.h
lib/stm32/crc_v1/: crc_device.cpp  crc_impl.cpp  sources.cmake
lib_linux/: CMakeLists.txt
test_chibios_blinker/: CMakeLists.txt  main.cpp
test_chibios_blinker/conf/: chconf.h  halconf.h  mcuconf.h
tests/: CMakeLists.txt  cobs.cpp  device_config.json.sample  packetizer.cpp  test1.cpp  utils.cpp  utils.h
tests/host_spacket/: CMakeLists.txt
tests/host_utils/: CMakeLists.txt  buf.h  utils.h
tests/libhost_crc/: CMakeLists.txt
tests/libhost_spacket/: CMakeLists.txt
tests/libhost_utils/: CMakeLists.txt  buf.h  utils.h
tests/misc/: jlink_connect.sh.in  jlink_test_wrapper.sh.in
tests/python/: test_utils.py
tests/target_boards/STM32F103C8_MINIMAL/: board.h  openocd.cfg  sources.cmake
tests/target_utils/: sources.cmake  test_macros.h
tests/test_chibios_blinker/: CMakeLists.txt
tests/test_chibios_blinker/conf/: SEGGER_RTT_Conf.h  chconf.h
tests/test_host_serial_loopback/: CMakeLists.txt  tests.cpp
tests/test_host_target_cobs_echo/: CMakeLists.txt  tests.cpp
tests/test_host_target_cobs_echo/fw/: CMakeLists.txt  buffer.h  constants.h  main.cpp  process_incoming.h
tests/test_host_target_cph_uart/: CMakeLists.txt  device_config.json.sample
tests/test_host_target_cph_uart/fw/: CMakeLists.txt  buffer.h  constants.h  main.cpp
tests/test_host_target_cph_uart/fw/conf/: SEGGER_RTT_Conf.h
tests/test_host_target_multiplexer/: CMakeLists.txt  tests.cpp
tests/test_host_target_multiplexer/fw/: CMakeLists.txt  main.cpp
tests/test_host_target_multiplexer/fw/conf/: chconf.h
tests/test_host_target_packet_crc/: CMakeLists.txt  tests.cpp
tests/test_host_target_packet_crc/fw/: CMakeLists.txt  main.cpp
tests/test_host_target_packet_device/: CMakeLists.txt  tests.cpp
tests/test_host_target_packet_device/fw/: CMakeLists.txt  buffer.h  constants.h  main.cpp
tests/test_host_target_packet_echo/: CMakeLists.txt  build_config.cpp.in  tests.cpp
tests/test_host_target_packet_echo/fw/: CMakeLists.txt  buffer.cpp  constants.h  main.cpp
tests/test_host_target_packetizer_echo/: CMakeLists.txt  tests.cpp
tests/test_host_target_packetizer_echo/fw/: CMakeLists.txt  buffer.h  main.cpp
tests/test_host_various/: CMakeLists.txt  cobs.cpp  crc.cpp  packet_decode_fsm.cpp  packetizer.cpp
tests/test_target_chibios/: CMakeLists.txt  flash.jlink.in  jlink_test_wrapper.sh.in  test.py  test.sh
tests/test_target_chibios/fw/: CMakeLists.txt  main.cpp
tests/test_target_crc_device/: CMakeLists.txt  test.py  tests.py
tests/test_target_crc_device/fw/: CMakeLists.txt  main.cpp  shell_commands.cpp
tests/test_target_loopback/: CMakeLists.txt  test_ctor_dtor.py  test_info.py  test_packet_size_limit.py  test_rx_timeout_no_data.py  tests.py
tests/test_target_loopback/fw/: CMakeLists.txt  buffer.h  constants.h  main.cpp  rtt_stream.cpp  shell_commands.cpp  shell_commands.h
tests/test_target_packet_loopback/: CMakeLists.txt  test.py  test.sh  test_idle_line.py  test_packet_size_limit.py  test_rx_timeout.py
tests/test_target_packet_loopback/fw/: CMakeLists.txt  buffer.h  main.cpp  shell_commands.cpp  shell_commands.h  system_halt_hook.cpp
tests/tests_linux/: CMakeLists.txt  test1.cpp  utils.cpp
tests_linux/: CMakeLists.txt  packetizer.cpp
v1/tests/: CMakeLists.txt
v1/tests/libhost_crc/: CMakeLists.txt
v1/tests/libhost_spacket/: CMakeLists.txt
v1/tests/test_host_serial_loopback/: CMakeLists.txt  build_config.h  tests.cpp
v1/tests/test_host_target_cobs_echo/: CMakeLists.txt  tests.cpp
v1/tests/test_host_target_cph_uart/: CMakeLists.txt  tests.cpp
v1/tests/test_host_target_multiplexer/: CMakeLists.txt  tests.cpp
v1/tests/test_host_target_packet_crc/: CMakeLists.txt  tests.cpp
v1/tests/test_host_target_packet_device/: CMakeLists.txt  tests.cpp
v1/tests/test_host_target_packet_echo/: CMakeLists.txt  tests.cpp
v1/tests/test_host_target_packetizer_echo/: CMakeLists.txt
v1/tests/test_host_various/: CMakeLists.txt  cobs.cpp  packet_decode_fsm.cpp  packetizer.cpp
v1/tests/test_target_chibios/: CMakeLists.txt  test.py
v1/tests/test_target_crc_device/: CMakeLists.txt
v1/tests/test_target_loopback/: CMakeLists.txt  tests.py
(+169 files in other folders)
